--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cookie-parser": "^1.4.7",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongodb": "^7.0.0"
+    "mongodb": "^7.0.0",
+    "roundrobin": "^2.0.0",
+    "zod": "^4.2.1"
   }
 }
