added docker, fixed main error in backend

--- a/app/package.json
+++ b/app/package.json
@@ -12,8 +12,8 @@
   },
   "license": "ISC",
   "author": "Alessandro Querenghi",
-  "type": "commonjs",
-  "main": "index.js",
+  "type": "module",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
