--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,12 +7,13 @@ services: # something missing???
           - "3000:3000"
         volumes:
           - ./app:/usr/src/app
-        links:
-          - "mongo:mongosrv"
+        depends_on:
+          - mongo
   mongo:
         container_name: mongo
         image: mongo
         volumes:
           - ./data:/data/db
+          - ./mongo-init:/docker-entrypoint-initdb.d
         ports:
           - "27017:27017"
