--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
+    "bootswatch": "^5.3.8",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4"
   },
