--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,19 +11,19 @@ services:
       - mongo
     environment:
       JWT_SECRET: miciomicio
-      # NODE_ENV: prod
+      NODE_ENV: prod
 
-  frontend:
-    container_name: frontend
-    build: ./frontend
-    command: npm run dev
-    ports:
-      - "5173:5173"
-    volumes:
-      - ./frontend:/usr/src/app
-      - /usr/src/app/node_modules
-    depends_on:
-      - backend
+  # frontend:
+  #   container_name: frontend
+  #   build: ./frontend
+  #   command: npm run dev
+  #   ports:
+  #     - "5173:5173"
+  #   volumes:
+  #     - ./frontend:/usr/src/app
+  #     - /usr/src/app/node_modules
+  #   depends_on:
+  #     - backend
 
   mongo:
     container_name: mongo
