--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,11 +2,9 @@ services:
   backend:
     container_name: backend
     build: ./backend
-    command: npx nodemon app.js
+    command: node app.js
     ports:
       - "3000:3000"
-    volumes:
-      - ./backend:/usr/src/app
     depends_on:
       - mongo
     environment:
